# aidemo

./: .env.example  DEPLOYMENT.md  README.md  netlify.toml  package-lock.json  package.json
backend/: pyproject.toml
backend/app/: main.py  models.py  services.py  storage.py
public/: index.html
src/: App.css  App.js  DocumentItem.js  DocumentList.js  Header.js  NewDocumentModal.js  SearchBar.js  SettingsContext.js  supabaseClient.js
src/components/: Admin.js  ArticlesPage.js  DialogView.js  DialogsPage.js  Flashcard.js  Navigation.js  SearchPage.js  Settings.js
src/styles/: Admin.css  ArticlesPage.css  DialogView.css  DialogsPage.css  Flashcard.css  Navigation.css  SearchPage.css  Settings.css
