[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Devin AI <158243242+devin-ai-integration[bot]@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.121.2"}
psycopg = {extras = ["binary"], version = "^3.2.12"}
boto3 = "^1.40.74"
litellm = "^1.80.0"
pypdf2 = "^3.0.1"
pdf2image = "^1.17.0"
python-docx = "^1.2.0"
pillow = "^12.0.0"
numpy = "^2.3.5"
scikit-learn = "^1.7.2"
openai = "^2.8.0"
python-multipart = "^0.0.20"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
